--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,8 @@
 COMPILE_SDK_VERSION=22
 BUILD_TOOLS_VERSION=22.0.1
 TARGET_SDK_VERSION=22
+
+org.gradle.daemon=true
+org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+org.gradle.parallel=true
+org.gradle.configureondemand=true
