--- a/Yukari/src/main/AndroidManifest.xml
+++ b/Yukari/src/main/AndroidManifest.xml
@@ -360,6 +360,10 @@
         <activity android:name=".activity.QueryEditorActivity"
                   android:windowSoftInputMode="adjustResize"
                   android:label="@string/title_activity_query_editor"/>
+
+        <activity
+            android:name=".activity.PluggaloidOutputActivity"
+            android:label="@string/title_activity_pluggaloid_output"/>
    </application>
 
 </manifest>
