--- a/Yukari/build.gradle
+++ b/Yukari/build.gradle
@@ -107,7 +107,7 @@ android {
 
 //-- Kotlin --
 buildscript {
-    ext.kotlin_version = '1.0.0'
+    ext.kotlin_version = '1.0.1-2'
     repositories {
         mavenCentral()
     }
