--- a/Yukari/build.gradle
+++ b/Yukari/build.gradle
@@ -107,7 +107,7 @@ android {
 
 //>>-- Kotlin --
 buildscript {
-    ext.kotlin_version = '1.0.3'
+    ext.kotlin_version = '1.0.2-1'
     repositories {
         mavenCentral()
     }
