--- a/Yukari/build.gradle
+++ b/Yukari/build.gradle
@@ -23,8 +23,9 @@ ext {
 
 dependencies {
     // Support & Play Services
-    compile 'com.android.support:appcompat-v7:20.0.+'
-    compile 'com.android.support:support-v4:22.2.+'
+    compile 'com.android.support:appcompat-v7:20.0.0'
+    compile 'com.android.support:support-v4:25.0.0'
+    compile 'com.android.support:support-annotations:24.2.1'
     compile "com.google.android.gms:play-services-plus:${playServicesVersion}"
     compile "com.google.android.gms:play-services-drive:${playServicesVersion}"
 
