--- a/Yukari/src/main/AndroidManifest.xml
+++ b/Yukari/src/main/AndroidManifest.xml
@@ -368,9 +368,13 @@
             android:name=".activity.PluggaloidOutputActivity"
             android:label="@string/title_activity_pluggaloid_output"/>
 
-	<activity
-            android:name=".activity.BackupActivity"
-            android:label="@string/title_activity_backup"/>
+        <activity
+                android:name=".activity.BackupActivity"
+                android:label="@string/title_activity_backup"/>
+
+        <activity
+            android:name=".activity.WelcomeActivity"
+            android:theme="@style/AppThemeNoTitle"/>
    </application>
 
 </manifest>
