--- a/Yukari/src/main/AndroidManifest.xml
+++ b/Yukari/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="shibafu.yukari"
     android:installLocation="auto"
     android:versionCode="76"
-    android:versionName="1.3.0.336 (lilium 161105)" >
+    android:versionName="1.3.1.337 (lilium 161106)" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -373,8 +373,7 @@
                 android:label="@string/title_activity_backup"/>
 
         <activity
-            android:name=".activity.WelcomeActivity"
-            android:theme="@style/AppThemeNoTitle"/>
+            android:name=".activity.WelcomeActivity"/>
    </application>
 
 </manifest>
