--- a/Yukari/build.gradle
+++ b/Yukari/build.gradle
@@ -58,22 +58,27 @@ dependencies {
     compile 'jp.dip.totori:totoridipjp4J-android:1.0'
     compile project(':twpfparser')
 
-    // いろいろ
-    compile 'com.jakewharton:butterknife:5.1.2' // TODO: ButterKnife 7がリリースされている。 http://qiita.com/yyaammaa/items/408bc3fe429175fd74ff
-    compile 'com.annimon:stream:1.0.8'
+    // プラグインシステム
+    compile project(':yukari-exvoice')
     compile 'twitter.intent:twitter-intent-core:1.0,0'
     compile 'twitter.intent:twitter-intent-t4j:1.0.0', {
         exclude group: 'org.twitter4j', module: 'twitter4j-core'
     }
+
+    // Annotation Processor
+    compile 'com.jakewharton:butterknife:5.1.2' // TODO: ButterKnife 7がリリースされている。 http://qiita.com/yyaammaa/items/408bc3fe429175fd74ff
+    provided 'org.projectlombok:lombok:1.16.4'
+    compile project(':yukari-processor-runtime')
+    annotationProcessor project(':yukari-processor')
+
+    // デバッグ用
     debugCompile "com.squareup.leakcanary:leakcanary-android:$leakCanaryVersion"
     releaseCompile "com.squareup.leakcanary:leakcanary-android-no-op:$leakCanaryVersion"
     testCompile "com.squareup.leakcanary:leakcanary-android-no-op:$leakCanaryVersion"
-    compile fileTree(dir: './libs', includes: ['*.jar'])
-    provided 'org.projectlombok:lombok:1.16.4'
-    compile project(':yukari-exvoice')
 
-    compile project(':yukari-processor-runtime')
-    annotationProcessor project(':yukari-processor')
+    // いろいろ
+    compile 'com.annimon:stream:1.0.8'
+    compile fileTree(dir: './libs', includes: ['*.jar'])
 
     // Kotlin
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
