--- a/Yukari/build.gradle
+++ b/Yukari/build.gradle
@@ -16,16 +16,23 @@ repositories {
 }
 
 ext {
+    supportLibVersion = '25.1.0'
     playServicesVersion = '6.5.87'
     twitter4jVersion = '4.0.5'
     leakCanaryVersion = '1.5'
 }
 
 dependencies {
-    // Support & Play Services
-    compile 'com.android.support:appcompat-v7:25.1.0'
-    compile 'com.android.support:support-v4:25.1.0'
-    compile 'com.android.support:multidex:1.0.1'
+    // Support Library
+    compile "com.android.support:appcompat-v7:$supportLibVersion"
+    compile "com.android.support:cardview-v7:$supportLibVersion"
+    compile "com.android.support:recyclerview-v7:$supportLibVersion"
+    compile "com.android.support:palette-v7:$supportLibVersion"
+    compile "com.android.support:support-v4:$supportLibVersion"
+    compile "com.android.support:design:$supportLibVersion"
+    compile "com.android.support:multidex:1.0.1"
+
+    // Play Services
     compile "com.google.android.gms:play-services-plus:${playServicesVersion}"
     compile "com.google.android.gms:play-services-drive:${playServicesVersion}"
 
