--- a/Yukari/build.gradle
+++ b/Yukari/build.gradle
@@ -105,6 +105,7 @@ android {
         targetSdkVersion 22
 
         multiDexEnabled true
+        vectorDrawables.useSupportLibrary = true
 
         ndk {
             abiFilters 'armeabi', 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
