--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,9 @@ buildscript {
 
 allprojects {
     repositories {
+        maven {
+            url 'http://192.168.11.23:8081/repository/maven-public/'
+        }
         jcenter()
     }
 }
